--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
             
             <!-- Slider VOC -->
             <div class="flex items-center space-x-4">
-                <label for="voc-slider" class="w-24 text-sm font-medium text-gray-400">V<sub>OC</sub> (V)</label>
+                <label for="voc-slider" class="w-24 text-sm font-medium text-gray-400">V<sub>CA</sub> (V)</label>
                 <input type="range" id="voc-slider" min="15" max="30" step="0.5" value="21" class="flex-grow h-2 bg-gray-600 rounded-lg appearance-none cursor-pointer">
                 <span id="voc-display" class="w-12 text-right font-mono text-orange-400">21.0 V</span>
             </div>
 
             <!-- Slider ISC -->
             <div class="flex items-center space-x-4">
-                <label for="isc-slider" class="w-24 text-sm font-medium text-gray-400">I<sub>SC</sub> (A)</label>
+                <label for="isc-slider" class="w-24 text-sm font-medium text-gray-400">I<sub>CC</sub> (A)</label>
                 <input type="range" id="isc-slider" min="3" max="10" step="0.1" value="6" class="flex-grow h-2 bg-gray-600 rounded-lg appearance-none cursor-pointer">
                 <span id="isc-display" class="w-12 text-right font-mono text-orange-400">6.0 A</span>
             </div>
